responses on openapi are now objects instead of arrays
